<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alpha Match</string>
    <string name="action_settings">Settings</string>
    <string name="start">START GAME</string>
    <string name="curTime">Your Current Time</string>
    <string name="bestTime">Time To Beat</string>
    <string name="time">00:00</string>
    <string name="quit">QUIT</string>
    <string name="seeBestTimes">View Best Times</string>
    <string name="best">BEST TIMES</string>
    <string name="noTimeYet">0</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>

</resources>
