<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/start"
        android:layout_marginBottom="31dp"
        android:text="@string/quit" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/best"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="52dp"
        android:text="@string/noTimeYet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time5"
        android:layout_below="@+id/time3"
        android:text="@string/noTimeYet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time4"
        android:layout_centerHorizontal="true"
        android:text="@string/noTimeYet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time4"
        android:layout_below="@+id/time2"
        android:text="@string/noTimeYet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time3"
        android:layout_below="@+id/time1"
        android:text="@string/noTimeYet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
